remove some java 8 features